# finbot

./: .gitignore  Dockerfile  README.md  pyproject.toml
finbot/: .env.example  bot.py
finbot/config_data/: config.py
finbot/db/: database.py  models.py
finbot/filters/: filters.py
finbot/handlers/: user_handlers.py
finbot/keyboards/: main_kb.py  set_menu.py
finbot/lexicon/: lexicon.py
finbot/services/: services.py
