[tool.poetry]
name = "finbot"
version = "0.1.0"
description = ""
authors = ["<eucle@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
environs = "^9.5.0"
sqlalchemy = "^2.0.21"
psycopg = {extras = ["binary", "pool"], version = "^3.1.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
